[package]
name = "decoyssh"
version = "1.0.0"
authors = ["Eugene “Aeron” Glybin"]
description = "A compact and portable SSH tarpit server."
categories = ["asynchronous", "command-line-utilities", "network-programming"]
keywords = ["ssh", "tarpit", "netsec", "security", "server"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/Aeron/decoyssh"
include = ["src/**/*", "build.rs", "LICENSE", "README.md"]
edition = "2021"
rust-version = "1.61"

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-signals = { version = "0.4" }
clap = { version = "3.1.6", features = ["derive", "env", "wrap_help"] }
fastrand = { version = "1.7" }
once_cell = { version = "1.12" }
shadow-rs = { version = "0.11.0", default-features = false }

[build-dependencies]
shadow-rs = { version = "0.11.0", default-features = false }

[target.'cfg(all(target_env = "musl"))'.dependencies]
mimalloc = { version = "0.1.29" }

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "decoyssh"
path = "src/main.rs"
