[package]
name = "decoyssh"
version = "1.1.0"
authors = ["Eugene “Aeron” Glybin"]
description = "A compact and portable SSH tarpit server."
categories = ["asynchronous", "command-line-utilities", "network-programming"]
keywords = ["ssh", "tarpit", "netsec", "security", "server"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/Aeron/decoyssh"
include = ["src/**/*", "LICENSE", "README.md"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.80" }
async-std = { version = "1.12" }
async-signals = { version = "0.4" }
clap = { version = "4.0", features = ["cargo", "derive", "env", "wrap_help"] }
fastrand = { version = "1.7" }
futures-util = { version = "0.3.29" }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1.29" }

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "decoyssh"
path = "src/main.rs"
